Edited README via GitHub

--- a/README
+++ b/README
@@ -9,4 +9,4 @@ Not implemented:
 
 Author:
 Arthur Pires Ribeiro Silva, arthurprs (at) gmail (dot) com
-Federal University of Uberl‚ndia
+Federal University of Uberl√¢ndia
